--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,18 @@
-buildscript{
-    ext{
-        compile_version = 30
-        tools_version ='30.0.2'
-        target_version = 30
-        kotlin_version ='1.4.21'
-        ktx = '1.3.2'
-        gson = '2.8.2'
-    }
-    dependencies{
-        classpath 'com.android.tools.build:gradle:4.1.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-    }
-}
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 
-//apply plugin: 'com.github.dcendents.android-maven'
-//group = 'com.github.swant'
 
 android {
-    compileSdkVersion compile_version
-    buildToolsVersion tools_version
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
     sourceSets {
         main.res.srcDirs += 'src/main/res_ui'
-//        main.assets.srcDirs += 'src/main/assets_tensorflow'
         main.jniLibs.srcDirs = ['libs']
     }
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion target_version
+        targetSdkVersion 30
 
         versionCode 5
         versionName "1.2.3"
@@ -53,27 +34,24 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     //commoon
 //    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
-    api 'androidx.appcompat:appcompat:1.2.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+//    api 'androidx.appcompat:appcompat:1.2.0'
+//    api 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    api 'jp.wasabeef:glide-transformations:3.0.1'
 
 
 //    api 'com.jaeger.statusbarutil:library:1.5.1'
-
-    api "androidx.core:core-ktx:$ktx"//注解序列化
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71"
 
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
-
-
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
     //json解析
-    api "com.google.code.gson:gson:$gson"
+    api "com.google.code.gson:gson:2.8.2"
 
     //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
 
