--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,5 @@
-buildscript{
-    dependencies{
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
-    }
-}
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.github.dcendents.android-maven'
-
 
 android {
     compileSdkVersion 30
@@ -20,10 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 30
-
         versionCode 5
         versionName "1.2.3"
-
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -36,78 +26,12 @@ android {
 }
 
 dependencies {
-
-
     api fileTree(include: ['*.jar'], dir: 'libs')
-    //commoon
-//    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
-
-//    api 'androidx.appcompat:appcompat:1.2.0'
-//    api 'androidx.constraintlayout:constraintlayout:2.0.4'
-
-    //    implementation 'com.github.bumptech.glide:glide:4.8.0'
-//    api 'jp.wasabeef:glide-transformations:3.0.1'
-
-
-//    api 'com.jaeger.statusbarutil:library:1.5.1'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71"
-
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-
     //json解析
-    api "com.google.code.gson:gson:2.8.2"
-
-    //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
-
-
-    //响应式编程
-//    api 'io.reactivex:rxjava:1.3.0'
-    //    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
-//    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    //image
-    //    compile 'com.github.bumptech.glide:compiler:4.5.0'
-    //在lifecycler onDestory 时自动解除订阅
-//    api 'com.uber.autodispose:autodispose:0.6.1'
-//    api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
-
+    api "com.google.code.gson:gson:$gson"
 }
-//repositories {
-//    mavenCentral()
-//}
-
-
-
-//apply plugin: 'com.github.dcendents.android-maven'
-//
-//ext {
-//    // 从Github上clone下来的项目的本地地址
-//    GITHUB_REPO_PATH = "/Users/AllenWang/Desktop/OoswantoO/Sagittarius/Practice/kbaselib"
-//    // compile 'com.audienl:super_library:1.0.0'
-//    PUBLISH_GROUP_ID = 'edu.tjrac.swant'
-//    PUBLISH_ARTIFACT_ID = 'kbaselib'
-//    PUBLISH_VERSION = '1.2.1'
-//}
-//
-//uploadArchives {
-//    repositories.mavenDeployer {
-//        def deployPath = file(project.GITHUB_REPO_PATH)
-//        repository(url: "file://${deployPath.absolutePath}")
-//        pom.project {
-//            groupId project.PUBLISH_GROUP_ID
-//            artifactId project.PUBLISH_ARTIFACT_ID
-//            version project.PUBLISH_VERSION
-//        }
-//    }
-//}
-//
-//// 源代码一起打包(不需要打包源代码的不要添加这几行)
-//task androidSourcesJar(type: Jar) {
-//    classifier = 'sources'
-//    from android.sourceSets.main.java.sourceFiles
-//}
-//artifacts {
-//    archives androidSourcesJar
-//}
